--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     const scriptURL = "https://script.google.com/macros/s/AKfycbyjmOE_QK3Cu-tgD2ev2HHBEU-oPrJn8P7lMVMGwdnIT1R9CO0scUxuj953Map4dM71/exec"; // Replace with your Web App URL
 
     document.getElementById("saveBtn").addEventListener("click", () => {
-      const payload = { name: "Agosto", score: 80/100 };
+      const payload = { name: "Agosto", score: 20 };
 
       fetch(scriptURL, {
         method: "POST",
@@ -29,5 +29,6 @@
   </script>
 </body>
 </html>
+
 
 
